add httpService replace $http.

--- a/starter.html
+++ b/starter.html
@@ -52,6 +52,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- controller -->
     <script src="org/biplateform/controller/main.js"></script>
     <script src="org/biplateform/controller/starter.js"></script>
+
+    <!-- service -->
+    <script src="org/biplateform/service/httpService/httpService.js"></script>
 </head>
 <!--
 BODY TAG OPTIONS:
