set main page.ready to make login function

--- a/starter.html
+++ b/starter.html
@@ -158,16 +158,27 @@ desired effect
             <ul class="sidebar-menu">
                 <li class="header">菜单</li>
                 <!-- Optionally, you can add icons to the links -->
-                <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
-                <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
+                <li class="active"><a href="#"><i class="fa fa-link"></i> <span>看板</span></a></li>
+                <li><a href="#"><i class="fa fa-link"></i> <span>图表</span></a></li>
                 <li class="treeview">
-                    <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
+                    <a href="#"><i class="fa fa-link"></i> <span>配置</span>
                         <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
                     </a>
                     <ul class="treeview-menu">
                         <li><a ui-sref="main({id:'0',name:'a'})">test dash board</a></li>
+                        <li><a href="#">Link in level 2</a></li>
+                    </ul>
+                </li>
+                <li class="treeview">
+                    <a href="#"><i class="fa fa-link"></i> <span>用户管理</span>
+                        <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li><a ui-sref="#">test dash board</a></li>
                         <li><a href="#">Link in level 2</a></li>
                     </ul>
                 </li>
