--- a/org/biplateform/pages/main.html
+++ b/org/biplateform/pages/main.html
@@ -1,1 +1,4 @@
-<div>{{test}}</div>
+<div ng-show="false">{{test}}</div>
+<div>
+    <img style="width: 100%;height: 100%" src="imgs/mainimg.jpg"/>
+</div>
